[package]
name = "clir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
glob = "0.3"
anyhow = "1.0"
log = "0.4.17"
rayon = "1.5.3"
env_logger = { version = "0.9.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
