[package]
name = "clir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
glob = "0.3"
anyhow = "1.0"
log = "0.4.17"
rayon = "1.5.3"
ansi_term = "0.12.1"
simple_logger = { version = "4.1.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
rand = "0.8.5"
